--- a/shop/.env
+++ b/shop/.env
@@ -17,4 +17,8 @@
 APP_ENV=dev
 APP_SECRET=cee072ca8fa49084221904c20cd46b25
 ###< symfony/framework-bundle ###
+
+
+###> doctrine/doctrine-bundle ###
 DATABASE_URL=mysql://root:root@127.0.0.1:3306/shop?serverVersion=5.7
+###< doctrine/doctrine-bundle ###
