--- a/shop/composer.json
+++ b/shop/composer.json
@@ -19,6 +19,7 @@
         "symfony/framework-bundle": "5.2.*",
         "symfony/intl": "5.2.*",
         "symfony/security-bundle": "5.2.*",
+        "symfony/translation": "5.2.*",
         "symfony/twig-bundle": "5.2.*",
         "symfony/yaml": "5.2.*",
         "twig/extra-bundle": "^2.12|^3.0",
