--- a/shop/.env
+++ b/shop/.env
@@ -22,3 +22,8 @@ APP_SECRET=cee072ca8fa49084221904c20cd46b25
 ###> doctrine/doctrine-bundle ###
 DATABASE_URL=mysql://root:root@127.0.0.1:3306/shop?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://yohan.g99@gmail.com:kodz2648c@default
+###< symfony/google-mailer ###
